Wed Jan 30 11:11:47 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* When sending JOIN command to router for processing the
	  sender's old command identifier was not saved back to the
	  sender's command context, fixed now.  The affected file is
	  silcd/command.c.

Tue Jan 29 19:49:31 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Applied patches from cras:

	  Memory leak fixes around libaries, irssi window resize fix,
	  new silclist.h and silcdlist.h, all extern inline changed to
	  static inline.

	* Removed dotconf from lib/dotconf, not needed anymore.

	* Removed TRQ from lib/trq, not needed anymore.

	* Do more frequent heartbeats (5 minutes instead of 10 minutes)
	  with server connections.  Later this will be configurable
	  in config file after new config file is done.  Affected file
	  silcd/server.c.

Tue Jan 29 10:35:03 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a crash in server related to channel announcements.
	  Affected file silcd/server.c.

Mon Jan 28 17:49:42 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed memory leaks in silc_server_create_new_channel*
	  functions.  Affected file silcd/server.c.

	* Fixed the CHANNEL_CHANGE notify to re-announce the channel
	  which ID was changed.  This way the router will send the
	  user list for the channel again, and server won't be in 
	  desync in some rare circumstances.  Affected file is
	  silcd/packet_receive.c.

Sun Jan 27 21:04:19 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Check for NULL socket pointer in the function
	  silc_server_packet_send_to_channel_real.  Affected file
	  silcd/packet_send.c.

	* Fixed the BAN notify handling to correctly remove ban
	  list.  Affected file silcd/packet_receive.c.

Sat Jan 26 23:01:03 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed some header addition to Toolkit distribution in
	  lib/silcutil/Makefile.am and lib/trq/Makefile.am.

	* Added lib/silcclient/client_ops_example.h as an template